# PFI_MVPTest_Enzo_AImodule

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  analisis_RM_1eraFase.ipynb  pyproject.toml  render.yaml  requirements.txt
ai_service/: Dockerfile  requirements-ai-service.txt
app/: streamlit_app.py
backlogProducto/: E11_backlog_update.md  E11_resultados_cierre.md  E12_plan.md  E12_resultados_cierre.md  E13_diagnostico_visual.md  E13_dynamic_axis_patch_applied.md  E13_patch_axis_detection.md  E13_plan.md  E13_resultados_cierre.md  E14_plan.md  E15_plan.md  E15_resultados_cierre.md  E16_plan.md  E19_plan.md  PF001_PF003_plan.md  PF004_PF007_plan.md  PF004_PF007_resultados_cierre.md  PF008_PF011_plan.md  PF008_PF011_resultados_cierre.md  PF012_PF019_plan.md  PF012_PF019_resultados_cierre.md  PF020_PF025_plan.md  PF020_PF025_resultados_cierre.md  PF026_PF030_plan.md  PF026_PF030_resultados_cierre.md  PF031_PF038_plan.md  PF031_PF038_resultados_cierre.md  backlog_kanban_IA_multiplanar.csv  backlog_kanban_IA_multiplanar.xlsx  backlog_producto_final_pfi_rm_lumbar.xlsx  diagnostico_integral_IA_multiplanar.md  generar_kanban_backlog.py
config/: axial_v3_low_cost_grid.json  data_freeze_config.json  model_registry_final.json
docs/: AI_BACKEND_CONTRACT_ALIGNMENT.md  AI_MODULE_API_CONTRACT.md  AXIAL_FINAL_TRAINING_NOTEBOOK.md  BACKLOG_MASTER_UNIFICADO.md  BACKLOG_REFACTOR_CRITICO.md  CLOUD_ENVIRONMENT_VARIABLES.md  DEPLOY_AI_MODULE.md  DEV-001-docker-ai.md  E2E_AI_MODULE_RESULT.md  ESTADO_Y_ROADMAP_100.md  MULTIREPO_ARCHITECTURE.md  producto.md  (+16 more)
(+221 files in other folders)
