[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lumbar-mri-assistant"
version = "0.1.0"
description = "MVP académico para análisis asistido de RM lumbar sagital."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Enzo Asplanatti" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "scikit-image>=0.21",
  "scikit-learn>=1.3",
  "torch>=2.0",
  "torchvision>=0.15",
  "simpleitk>=2.3",
  "google-cloud-storage>=2.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
app = [
  "streamlit>=1.35",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
